--- a/themes/habitat/assets/styles/index.scss
+++ b/themes/habitat/assets/styles/index.scss
@@ -33,6 +33,7 @@
 @import 'partials/box';
 @import 'partials/claim';
 @import 'partials/contact';
+@import 'partials/courses';
 @import 'partials/events';
 @import 'partials/feature';
 @import 'partials/follow-us';
@@ -46,6 +47,8 @@
 @import 'partials/statement';
 @import 'partials/submenu';
 @import 'partials/tabs';
+@import 'partials/tabs';
+@import 'partials/tags';
 
 // Grid helper
 @import 'grid';
