--- a/themes/habitat/layouts/_default/tabs.html
+++ b/themes/habitat/layouts/_default/tabs.html
@@ -1,5 +1,5 @@
 {{- define "before-page" }}
-	{{- with .Site.GetPage "section" .Section }}
+	{{- with .Site.GetPage "kurse" .Section }}
 		<h1 class="before-none">
 			{{ .Title }}
 		</h1>
