--- a/themes/habitat/assets/styles/elements/_forms.scss
+++ b/themes/habitat/assets/styles/elements/_forms.scss
@@ -16,12 +16,7 @@ form {
 }
 
 label {
-	font-size: 1.2rem;
-	font-weight: 600;
-	color: $color-brand-gray;
-	letter-spacing: 0.1rem;
-	line-height: 2.5rem;
-	text-transform: uppercase;
+	@extend %label;
 }
 
 button {
