--- a/themes/habitat/layouts/partials/header.html
+++ b/themes/habitat/layouts/partials/header.html
@@ -7,13 +7,10 @@
 
 	<nav id="nav" class="header__nav">
 		<ul role="menubar">
-			{{- partial "menu-item-dropdown.html" (dict "context" . "menu" "workshops" "title"
-			"Werkstätten") }} {{- partial "menu-items.html" (dict "context" . "from" 0 "to" 399) }}
-			{{- partial "menu-item-dropdown.html" (dict "context" . "menu" "events" "title" "Kurse &
-			Veranstaltungen") }} {{- partial "menu-items.html" (dict "context" . "from" 400 "to"
-			9999) }}
-			<!-- {{- partial "menu-item-dropdown.html" (dict "context" . "menu" "events" "title" "Veranstaltungen") }}
-			{{- partial "menu-items.html" (dict "context" . "from" 400 "to" 3999) }} -->
+			{{- partial "menu-item-dropdown.html" (dict "context" . "menu" "workshops" "title" "Werkstätten") }}
+			{{- partial "menu-items.html" (dict "context" . "from" 0 "to" 399) }}
+			{{- partial "menu-item-dropdown.html" (dict "context" . "menu" "events" "title" "Kurse & Veranstaltungen") }}
+			{{- partial "menu-items.html" (dict "context" . "from" 400 "to" 9999) }}
 		</ul>
 	</nav>
 </header>
