#17 Add Code of Conduct

--- a/themes/habitat/layouts/partials/footer.html
+++ b/themes/habitat/layouts/partials/footer.html
@@ -53,6 +53,9 @@
 					<li>
 						<a href="/kontakt">Kontakt &amp; Anfahrt</a>
 					</li>
+					<li>
+						<a href="/verhaltenskodex">Verhaltenskodex</a>
+					</li>
 				</ul>
 			</div>
 		</nav>
