--- a/themes/habitat/assets/styles/partials/_main.scss
+++ b/themes/habitat/assets/styles/partials/_main.scss
@@ -1,6 +1,9 @@
 main {
-	p {
+	p,
+	ul,
+	ol {
 		@include media-lg {
+			box-sizing: border-box;
 			max-width: calc(var(--grid-column) * 5 + var(--grid-column-gap) * 4);
 		}
 	}
