--- a/themes/habitat/assets/styles/partials/_announcement.scss
+++ b/themes/habitat/assets/styles/partials/_announcement.scss
@@ -3,6 +3,11 @@
 	color: $color-brand-white;
 }
 
+.announcement--happy {
+	background: $color-brand-green;
+	color: $color-brand-white;
+}
+
 .announcement--urgent {
 	background: $color-brand-black;
 	color: $color-brand-yellow;
