--- a/themes/habitat/layouts/_default/single.html
+++ b/themes/habitat/layouts/_default/single.html
@@ -9,7 +9,7 @@
 
 	<div class="statement">
 		<blockquote>
-			<p>{{ htmlUnescape .Params.statement }}</p>
+			<p>{{ htmlUnescape .Params.statement | markdownify }}</p>
 		</blockquote>
 	</div>
 {{- else }}
