--- a/themes/habitat/assets/styles/_global.scss
+++ b/themes/habitat/assets/styles/_global.scss
@@ -21,16 +21,17 @@ body {
 	line-height: calc(25 / 15);
 }
 
-.main--grid {
-	@include grid;
-
-	> * {
-		grid-column: 1 / -1;
-	}
-}
-
 a {
 	@include link;
+}
+
+hr {
+	display: block;
+	width: 100%;
+	height: 0;
+	margin-top: calc(var(--offset-vertical-2) - 2px);
+	margin-top: calc(var(--offset-vertical-2) - 1px);
+	border-top: 3px solid $color-brand-gray-10;
 }
 
 figure {
