Replace contact form with custom service

--- a/themes/habitat/layouts/partials/forms/contact.html
+++ b/themes/habitat/layouts/partials/forms/contact.html
@@ -1,22 +1,22 @@
-<form class="form-contact" method="post" action="https://api.staticforms.xyz/submit">
+<form class="form-contact" method="post" action="https://postbote.das-habitat.de/form/contact">
 	<p>
-		<input type="hidden" name="accessKey" value="{{ .Site.Params.forms.contact.accessKey }}">
-		<input type="hidden" name="replyTo" value="@">
-		<input type="text" name="honeypot" style="display:none">
-		<input type="hidden" name="redirectTo" value="{{ (.Site.GetPage .Site.Params.forms.contact.redirect).Permalink }}">
-
 		<label for="contact-name">Name*</label>
-		<input class="form-control" type="text" id="contact-name" name="name"  required>
+		<input class="form-control" type="text" id="contact-name" name="name" autocomplete="name" required>
 	</p>
 
 	<p>
 		<label for="contact-email">E-Mail*</label>
-		<input class="form-control" type="email" id="contact-email" name="email" required>
+		<input class="form-control" type="email" id="contact-email" name="email" autocomplete="email" required>
 	</p>
 
 	<p>
-		<label for="contact-message">Deine Nachricht an das Habitat*</label>
-		<textarea class="form-control" name="message" id="contact-message" rows="12" placeholder="" required></textarea>
+		<label for="contact-subject">In welcher Stadt ist das Habitat?*</label>
+		<input class="form-control" type="text" id="contact-subject" name="subject" autocomplete="off" required>
+	</p>
+
+	<p>
+		<label for="contact-body">Deine Nachricht an das Habitat*</label>
+		<textarea class="form-control" name="body" id="contact-body" rows="12" placeholder="" required></textarea>
 	</p>
 
 	<p>
