--- a/themes/habitat/layouts/partials/forms/contact.html
+++ b/themes/habitat/layouts/partials/forms/contact.html
@@ -1,4 +1,4 @@
-<form class="form-contact" method="post" action="https://postbote.das-habitat.de/form/contact">
+<form class="form-contact" method="post" action="https://postbote.das-habitat.de/form/contact" onsubmit="fathom.trackGoal('HHDULLAL', 0);">
 	<p>
 		<label for="contact-name">Name*</label>
 		<input class="form-control" type="text" id="contact-name" name="name" autocomplete="name" required>
