--- a/src/styles/_config.scss
+++ b/src/styles/_config.scss
@@ -12,3 +12,8 @@ $color-brand-gray-inverted: mix($color-brand-gray, $color-brand-white, 50%);
 $color-brand-gray-10: transparentize($color-brand-gray, 0.9);
 $color-brand-gray-50: mix($color-brand-gray, $color-brand-white, 50%);
 $color-brand-pale: #809979;
+
+$brand-yellow: #f6bc27;
+
+$spacing-md: 1rem;
+$spacing-lg: 2rem;
