--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -8,3 +8,14 @@
 
 // Toolkit
 @import 'functions/inline-svg';
+@import 'functions/media';
+
+// Globals
+
+@import 'global';
+
+// Partials
+
+@import 'partials/container';
+@import 'partials/site';
+@import 'partials/top';
