--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -17,5 +17,7 @@
 // Partials
 
 @import 'partials/container';
+@import 'partials/forms';
+@import 'partials/grids';
 @import 'partials/site';
 @import 'partials/top';
