--- a/src/styles/_config.scss
+++ b/src/styles/_config.scss
@@ -6,8 +6,9 @@ $color-brand-blueAlt: #4773a8;
 $color-brand-green: #008a59;
 $color-brand-greenAlt: #45a734;
 $color-brand-white: #fcfcfa;
+$color-white: #fcfcfa;
 $color-brand-black: #0f0f0e;
-$color-brand-gray: mix(#4c4d4a, $color-brand-white, 85%);
+$color-brand-gray: #4c4d4a;
 $color-brand-gray-inverted: mix($color-brand-gray, $color-brand-white, 50%);
 $color-brand-gray-10: transparentize($color-brand-gray, 0.9);
 $color-brand-gray-50: mix($color-brand-gray, $color-brand-white, 50%);
@@ -17,3 +18,6 @@ $brand-yellow: #f6bc27;
 
 $spacing-md: 1rem;
 $spacing-lg: 2rem;
+$spacing-xl: 3rem;
+$spacing-2xl: 5rem;
+$spacing-3xl: 7.5rem;
