--- a/src/styles/_global.scss
+++ b/src/styles/_global.scss
@@ -22,6 +22,15 @@ html {
 }
 
 body {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+  overflow-x: hidden;
   font-size: 1.5rem;
   line-height: calc(25 / 15);
+}
+
+figure {
+  margin: 0;
+  padding: 0;
 }
