--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -22,6 +22,7 @@
 @import 'partials/grids';
 @import 'partials/blocks';
 @import 'partials/container';
+@import 'partials/feature';
 @import 'partials/forms';
 @import 'partials/sidebar';
 @import 'partials/top';
