--- a/src/styles/_config.scss
+++ b/src/styles/_config.scss
@@ -16,6 +16,7 @@ $color-brand-pale: #809979;
 
 $brand-yellow: #f6bc27;
 
+$spacing-sm: 0.5rem;
 $spacing-md: 1rem;
 $spacing-lg: 2rem;
 $spacing-xl: 3rem;
