--- a/src/styles/partials/_top.scss
+++ b/src/styles/partials/_top.scss
@@ -4,7 +4,7 @@
   padding: $spacing-md 0;
 
   @include media-md {
-    padding: $spacing-3xl 0 $spacing-xl;
+    padding: $spacing-3xl 0 $spacing-3xl;
   }
 }
 
