--- a/src/styles/partials/_sidebar.scss
+++ b/src/styles/partials/_sidebar.scss
@@ -1,6 +1,8 @@
 .sidebar {
-  grid-column: -3 / span 1;
-  grid-row: 2;
+  @include media-lg {
+    grid-column: -3 / span 1;
+    grid-row: 2;
+  }
 }
 
 .contact a,
