--- a/src/styles/partials/_top.scss
+++ b/src/styles/partials/_top.scss
@@ -1,27 +1,43 @@
 .top {
   margin: 0;
   display: grid;
-  grid-template-columns: auto auto;
   padding: $spacing-md 0;
   grid-column: 2 / -2;
+  align-items: center;
 
   @include media-md {
     padding: $spacing-3xl 0 $spacing-3xl;
   }
 
-  @include media-lg {
-
+  @media media-lg-max {
+    grid-template-columns: auto auto;
   }
 }
 
 .top_logo {
   grid-column: 1 / 2;
   grid-row: 1;
+  margin: 0;
 }
 
 .top_toggle {
+  position: relative;
+  top: -0.3rem;
   grid-column: 2 / 3;
   grid-row: 1;
+  display: inline-block;
+  width: auto;
+  margin-right: -$spacing-md;
+  padding: 1rem calc(18px + #{$spacing-md} * 2) 1rem 0;
+  text-align: right;
+  background: transparent inline-svg('<svg width="18" height="12" viewBox="0 0 18 12" xmlns="http://www.w3.org/2000/svg"><path d="M18 10v2H0v-2h18zm0-5v2H0V5h18zm0-5v2H0V0h18z" fill="#{$color-brand-blueAlt}" fill-rule="evenodd"/></svg>') no-repeat;
+  background-position: right #{$spacing-md} center;
+  color: $color-brand-blueAlt;
+  font-size: 1.4rem;
+}
+
+.top_nav_inner {
+  padding-bottom: $spacing-xl;
 }
 
 [aria-labelledby="menu-button"] {
@@ -32,7 +48,7 @@
   display: block;
 }
 
-@include media-lg {
+@include media-lg-min {
   .top_logo {
     grid-column: -2 / -1;
     grid-row: 1;
