Enable CSS Grid for page blocks

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -39,6 +39,7 @@
 
 @import 'partials/site';
 @import 'partials/grids';
+@import 'partials/page';
 @import 'partials/blocks';
 @import 'partials/container';
 @import 'partials/feature';
