Reorganize healdine spacing in consecutive blocks

--- a/src/styles/_typography.scss
+++ b/src/styles/_typography.scss
@@ -9,7 +9,22 @@ h6 {
   color: $color-brand-black;
 }
 
+h1, h2, h3, h4 , h5, h6 {
+  margin-bottom: $spacing-md;
+
+  * + & {
+    margin-top: $spacing-xl;
+  }
+
+  & + & {
+    margin-top: $spacing-lg;
+  }
+}
+
+
+
 strong,
 b {
   font-weight: 600;
 }
+
