--- a/src/styles/partials/_blocks.scss
+++ b/src/styles/partials/_blocks.scss
@@ -1,8 +1,12 @@
 .block + .block {
   margin-top: $spacing-lg;
+
+  > h1:first-child, > h2:first-child, > h3:first-child, > h4:first-child, > h5:first-child, > h6:first-child {
+    margin-top: $spacing-2xl;
+  }
 }
 
-.block-type-image > figure[data-ratio="auto"] img {
+.block-type-image > fi:first-childgure[data-ratio="auto"] img {
   max-width: 100%;
   height: auto;
 }
