Add CSS offsets and footer styling

--- a/src/styles/_typography.scss
+++ b/src/styles/_typography.scss
@@ -21,10 +21,18 @@ h1, h2, h3, h4 , h5, h6 {
   }
 }
 
-
-
 strong,
 b {
   font-weight: 600;
 }
 
+.type-larger {
+  font-weight: 450;
+  color: $color-brand-gray;
+  font-size: 1.8rem;
+  line-height: calc(28 / 16);
+}
+
+.type-right {
+  text-align: right;
+}
