--- a/src/styles/blocks/_index.scss
+++ b/src/styles/blocks/_index.scss
@@ -1,4 +1,6 @@
-.block + .block {
+@import 'markdown';
+
+[class*="block"] + [class*="block"] {
   margin-top: $spacing-lg;
 
   > h1:first-child, > h2:first-child, > h3:first-child, > h4:first-child, > h5:first-child, > h6:first-child {
