--- a/src/styles/partials/_top.scss
+++ b/src/styles/partials/_top.scss
@@ -60,17 +60,18 @@
     position: relative;
     grid-column: 1 / -2;
     grid-row: 1;
-    min-height: 4rem;
+    min-height: 2rem;
+    line-height: 2rem;
   }
 
   .top_nav_inner {
     position: absolute;
     width: calc(100% + 2rem);
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
+    grid-auto-columns: 1fr;
     margin: -2rem 0 0 -2rem;
-    padding: 2rem;
-    row-gap: $spacing-lg;
+    padding: 2rem 2rem 1rem;
+    row-gap: 0;
   }
 
   .top_nav h4 {
@@ -79,13 +80,14 @@
     padding: 0;
     opacity: 0.5;
     text-transform: uppercase;
+    cursor: default;
   }
 
   .top_nav ul {
     grid-row: 2;
     display: none;
     margin: 0;
-    padding: 0 0 $spacing-xl;
+    padding: $spacing-lg 0 $spacing-xl;
     list-style: none;
   }
 
@@ -93,12 +95,10 @@
     margin-top: $spacing-md;
   }
 
-  .top_nav:hover,
-  .top_nav:focus-within {
-    .top_nav_inner {
-      background: #fff;
-      box-shadow: 0 1px 6px -3px rgba(15,15,14,0.30), 0 5px 25px -7px rgba(15,15,14,0.30), 0 10px 50px -20px rgba(15,15,14,0.30);
-    }
+  .top_nav_inner:hover,
+  .top_nav_inner:focus-within {
+    background: #fff;
+    box-shadow: 0 1px 6px -3px rgba(15,15,14,0.30), 0 5px 25px -7px rgba(15,15,14,0.30), 0 10px 50px -20px rgba(15,15,14,0.30);
 
     ul {
       display: block;
