Fix broken HTML in menus

--- a/src/styles/partials/_end.scss
+++ b/src/styles/partials/_end.scss
@@ -32,6 +32,7 @@
 @include media-lg-min {
   .end nav {
     display: grid;
+    grid-auto-columns: 1fr;
     grid-template-rows: min-content auto;
   }
 
